# math-lang

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py  plotting.py  sessions.py
api/routes/: evaluate.py  operations.py  sessions.py  websocket.py
cli/: __init__.py  formatters.py  main.py  repl.py  runner.py
examples/: complex-numbers.mlang  functional-patterns.mlang  golden-ratio.mlang  physics-projectile.mlang  prime-explorer.mlang  sample.mlang  sequences-series.mlang  statistics-intro.mlang  vectors-geometry.mlang
mathlang/: __init__.py
mathlang/engine/: __init__.py  dispatcher.py  errors.py  evaluator.py  session.py
mathlang/lang/: __init__.py  ast.py  errors.py  grammar.lark  parser.py
mathlang/operations/: __init__.py  base.py  registry.py
mathlang/operations/providers/: __init__.py  arithmetic.py  combinatorics.py  datetime.py  (+8 more)
mathlang/types/: __init__.py  base.py  callable.py  coercion.py  collection.py  result.py  scalar.py  vector.py
mathlang/utils/: __init__.py  math_helpers.py
tests/: __init__.py  conftest.py
tests/engine/: __init__.py  test_evaluator.py  test_session_and_dispatcher.py
tests/lang/: __init__.py  test_ast.py  test_errors.py  test_parser.py
tests/operations/: test_arithmetic_provider.py  test_combinatorics_provider.py  test_datetime.py  test_statistics_provider.py  test_vectors.py  test_visualization.py
tests/types/: test_additional_types.py  test_vector.py
tests/utils/: test_math_helpers.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
(+8 files in other folders)
